--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=8080
+MONGODB_CNN=mongodb://localhost:27017/trello
+
+mongodb+srv://mariodb:warioegh92@proyectos-mario.svchx.mongodb.net/todo?retryWrites=true&w=majority
+
+mongodb://localhost:27017/trello
