--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8080
-MONGODB_CNN=mongodb+srv://mariodb:warioegh92@proyectos-mario.svchx.mongodb.net/todo?retryWrites=true&w=majority
+MONGODB_CNN=
